--- a/wiki/EngineeringSolutions.wiki
+++ b/wiki/EngineeringSolutions.wiki
@@ -1,4 +1,5 @@
 #summary Describes main engineering solutions that have to be used in application implementation.
+#labels Phase-Requirements
 
 = iSubway engineering solutions =
 
